--- a/wp-content/plugins/acf-form-blocks/blocks/radios/style.css
+++ b/wp-content/plugins/acf-form-blocks/blocks/radios/style.css
@@ -8,13 +8,17 @@
 }
 
 .acf-block-radios ul.radios-options li {
-	display: flex;
-	gap: 0.5rem;
 	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0.5rem;
+	justify-content: center;
 }
 
 .acf-block-radios ul.radios-options input[type=radio] {
 	cursor: pointer;
+	height: 1.25rem;
+	width: 1.25rem;
 }
 
 .acf-block-radios.is-style-inline ul.radios-options {
