--- a/wp-content/plugins/acf-form-blocks/blocks/radios/style.css
+++ b/wp-content/plugins/acf-form-blocks/blocks/radios/style.css
@@ -17,8 +17,8 @@
 
 .acf-block-radios ul.radios-options input[type=radio] {
 	cursor: pointer;
-	height: 1.25rem;
-	width: 1.25rem;
+	min-height: 1.25rem;
+	min-width: 1.25rem;
 }
 
 .acf-block-radios.is-style-inline ul.radios-options {
