--- a/wp-content/plugins/acf-form-blocks/assets/css/admin.css
+++ b/wp-content/plugins/acf-form-blocks/assets/css/admin.css
@@ -1,3 +1,61 @@
 a.page-title-action:empty {
 	display: none;
 }
+
+.acffb-submission th {
+	padding-top: 10px;
+	padding-bottom: 5px;
+}
+.acffb-submission td {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.acffb-submission .text-input {
+	border: 1px solid #ddd;
+	padding: 0.25rem 0.5rem;
+	background-color: #F8F8F8;
+}
+.acffb-submission pre.text-input {
+	overflow: auto;
+	white-space: pre-wrap;
+	font-size: 12px;
+}
+
+.acffb-checkbox-list {
+	columns: 2;
+	overflow-wrap: break-word;
+}
+.acffb-checkbox-list li {
+	display: flex;
+	gap: 0.2rem;
+}
+
+.acffb-checkbox-list li .checkbox {
+	align-items: center;
+	border: 1px dotted #333;
+	display: inline-flex;
+	height: 16px;
+	justify-content: center;
+	margin: 1px;
+	width: 16px;
+	break-inside: avoid;
+}
+.acffb-checkbox-list li.checked {
+	font-weight: bold;
+}
+.acffb-checkbox-list li.checked .checkbox {
+	border: 2px solid #000;
+	margin: 0;
+}
+
+.acffb-sub-field {
+	display: flex;
+	gap: 0.5rem;
+	margin-bottom: 0.15rem;
+}
+.acffb-sub-field .sub-field-label {
+	flex-basis: 120px;
+}
+.acffb-sub-field .text-input {
+	flex-grow: 1;
+}
