--- a/wp-content/plugins/acf-form-blocks/blocks/form/style.css
+++ b/wp-content/plugins/acf-form-blocks/blocks/form/style.css
@@ -5,6 +5,9 @@
 .acf-block-form input[type="url"],
 .acf-block-form input[type="number"],
 .acf-block-form input[type="password"],
+.acf-block-form input[type="date"],
+.acf-block-form input[type="time"],
+.acf-block-form input[type="datetime-local"],
 .acf-block-form select,
 .acf-block-form textarea {
 	display: block;
@@ -13,6 +16,10 @@
 	border: 1px solid #000;
 	border-radius: 3px;
 	padding: 0.5rem 0.75rem;
+}
+
+.acf-block-form .form-input.input-type-hidden {
+	display: none;
 }
 
 .acf-block-form .form-input > label,
