--- a/wp-content/themes/wp-starter/blocks/breadcrumbs/style.css
+++ b/wp-content/themes/wp-starter/blocks/breadcrumbs/style.css
@@ -1,15 +1,53 @@
+@layer components {
+	/* Rank Math breadcrumb styles */
+	.rank-math-breadcrumb {
+		p {
+			@apply flex flex-wrap gap-8;
+		}
+
+		a {
+			@apply text-gray-700 underline hover:no-underline focus:no-underline;
+		}
+	}
+
+	/* WP breadcrumb styles */
+	.is-style-breadcrumbs {
+		@apply flex flex-wrap gap-8;
+
+		.wp-block-button {
+			@apply after:ml-10 after:content-['>'];
+
+			&:last-of-type {
+				@apply after:hidden;
+			}
+
+			.wp-block-button__link.wp-element-button {
+				@apply !m-0 bg-transparent !p-0 text-gray-700 underline hover:bg-transparent hover:no-underline focus:bg-transparent focus:no-underline;
+			}
+		}
+	}
+}
+
 /** Breadcrumb Block Style */
-:root .wp-block-buttons.is-style-breadcrumbs .wp-block-button__link:not(.btn-text) {
+:root
+	.wp-block-buttons.is-style-breadcrumbs
+	.wp-block-button__link:not(.btn-text) {
 	padding: 0;
 	color: var(--wp--preset--color--black);
 	background-color: transparent;
 }
 
-:root .wp-block-buttons.is-style-breadcrumbs .wp-block-button:last-child .wp-block-button__link:not(.btn-text) {
+:root
+	.wp-block-buttons.is-style-breadcrumbs
+	.wp-block-button:last-child
+	.wp-block-button__link:not(.btn-text) {
 	color: var(--wp--preset--color--accent);
 	text-decoration: underline;
 }
 
-:root .wp-block-buttons.is-style-breadcrumbs .wp-block-button:not(:last-child) .wp-block-button__link:after {
+:root
+	.wp-block-buttons.is-style-breadcrumbs
+	.wp-block-button:not(:last-child)
+	.wp-block-button__link:after {
 	content: '>';
 }
