--- a/wp-content/themes/wp-starter/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/block.json.hbs
@@ -6,11 +6,35 @@
   "category": "components",
   "textdomain": "wp-starter",
   "keywords": ["{{dashCase name}}"],
+  "attributes": {
+    "align": {
+      "type": "string",
+      "default": "full"
+    },
+    "style": {
+      "type": "object",
+      "default": {
+        "spacing": {
+          "padding": {
+            "top": "var:preset|spacing|20",
+            "bottom": "var:preset|spacing|20",
+            "left": "var:preset|spacing|20",
+            "right": "var:preset|spacing|20"
+         }
+        }
+      }
+    }
+  },
   "supports": {
     "jsx": true,
     "mode": false,
-    "alignWide": true
+    "alignWide": true,
+    "color": {
+      "background": true
+    }
   },
+  -- PREPEND STYLES HERE --
+  -- PREPEND VARIATIONS HERE --
   "acf": {
     "mode": "preview"
   }
