[#129] Adding new block css to main.css - refactor

--- a/wp-content/themes/wp-starter/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/block.json.hbs
@@ -2,7 +2,7 @@
   "name": "{{dashCase name}}",
   "title": "{{titleCase name}}",
   "description": "Displays the {{titleCase name}}",
-  "icon": "schedule",
+  "icon": "{{icon}}",
   "category": "components",
   "textdomain": "wp-starter",
   "keywords": ["{{dashCase name}}"],
