--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -22,3 +22,5 @@
 @import '../../blocks/text-image/style.css';
 @import '../../blocks/text-icon-cards/style.css';
 @import '../../blocks/video-embed/style.css';
+
+/*Everything below this line is automatically generated DO NOT REMOVE*/
