--- a/wp-content/themes/wp-starter/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/block.json.hbs
@@ -33,8 +33,8 @@
       "background": true
     }
   },
-  -- PREPEND STYLES HERE --
-  -- PREPEND VARIATIONS HERE --
+  -- STYLES HERE --
+  -- VARIATIONS HERE --
   "acf": {
     "mode": "preview"
   }
