[#129] Adding block pattern and theme slugs

--- a/wp-content/themes/wp-starter/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/block.json.hbs
@@ -4,7 +4,7 @@
   "description": "Displays the {{titleCase name}}",
   "icon": "{{icon}}",
   "category": "components",
-  "textdomain": "wp-starter",
+  "textdomain": "{{dashCase themeslug}}",
   "keywords": ["{{dashCase name}}"],
   "attributes": {
     "align": {
