--- a/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
@@ -6,7 +6,7 @@
 	[
 		'core/pattern',
 		{
-			'slug': 'wp-starter/{{dashCase name}}-inner-blocks',
+			'slug': '{{dashCase themeslug}}/{{dashCase name}}-inner-blocks',
 		}
 	]
 ] %}
