[#129] Fixing pattern template

--- a/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
@@ -11,9 +11,11 @@
 	]
 ] %}
 
+{# If you need to limit what block types are allowed
 {% set allowed = [
 	'core/group',
 ] %}
+#}
 
 {% set inner = {
 	template: template,
