--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -23,4 +23,4 @@
 @import '../../blocks/text-icon-cards/style.css';
 @import '../../blocks/video-embed/style.css';
 
-/*DO NOT REMOVE Everything below this line is automatically generated*/
+/*DO NOT REMOVE - Everything below this line is automatically generated*/
