[#130] Setting width for all blocks
This adjusts the width for all blocks so they can have a full width background color but the content is constrained.

--- a/wp-content/themes/wp-starter/blocks/image-caption/render.twig
+++ b/wp-content/themes/wp-starter/blocks/image-caption/render.twig
@@ -12,5 +12,7 @@
 	templateLock: 'all'
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="alignwide">
+		{{ inner_blocks( inner ) }}
+	</div>
 </section>
