--- a/wp-content/themes/wp-starter/blocks/page-header/render.twig
+++ b/wp-content/themes/wp-starter/blocks/page-header/render.twig
@@ -12,5 +12,7 @@
 ] %}
 {% set inner = { template: template } %}
 <section {{ block_attrs( block ) }}>
+	<div class="alignwide">
 	{{ inner_blocks( inner ) }}
+	</div>
 </section>
