--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/render.twig
@@ -13,5 +13,7 @@
 	allowedBlocks: allowed,
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="flex flex-wrap gap-24 justify-left alignwide">
+  		{{ inner_blocks( inner ) }}
+	</div>
 </section>
