--- a/wp-content/themes/wp-starter/blocks/text-image/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-image/render.twig
@@ -21,5 +21,7 @@
 	allowedBlocks: allowed
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="alignwide">
+		{{ inner_blocks( inner ) }}
+	</div>
 </section>
