--- a/wp-content/themes/wp-starter/blocks/accordion/render.twig
+++ b/wp-content/themes/wp-starter/blocks/accordion/render.twig
@@ -18,5 +18,7 @@
 	allowedBlocks: allowed
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="alignwide">
+  		{{ inner_blocks( inner ) }}
+	</div>
 </section>
