--- a/wp-content/themes/wp-starter/blocks/cta/style.css
+++ b/wp-content/themes/wp-starter/blocks/cta/style.css
@@ -1,5 +1,7 @@
 @layer components {
 	.acf-block-cta {
+		@apply mx-auto flex flex-col gap-24 p-24 lg:p-64;
+
 		.wp-block-heading {
 			@apply text-2xl font-bold;
 		}
