--- a/wp-content/themes/wp-starter/blocks/video-embed/render.twig
+++ b/wp-content/themes/wp-starter/blocks/video-embed/render.twig
@@ -20,5 +20,7 @@
 	allowedBlocks: allowed
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="alignwide">
+		{{ inner_blocks( inner ) }}
+	</div>
 </section>
