[#129] Moving custom block css to it own file - cleanup

--- a/wp-content/themes/wp-starter/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/block.json.hbs
@@ -2,7 +2,7 @@
   "name": "{{dashCase name}}",
   "title": "{{titleCase name}}",
   "description": "Displays the {{titleCase name}}",
-  "icon": "{{icon}}",
+  "icon": "block-default",
   "category": "components",
   "textdomain": "{{dashCase themeslug}}",
   "keywords": ["{{dashCase name}}"],
