[#130] Refactoring the Alert banner

--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -43,7 +43,7 @@ Block: Alert Banner
 {% endif %}
 
 <section {{ block_attrs( block, '', attrs ) }} >
-	<div class="wp-block-alert-banner__inner-container">
+	<div class="wp-block-alert-banner__inner-container alignwide">
 		{{ inner_blocks( inner ) }}
 	</div>
 	{{ function( 'alert_banner_dismiss_button', id ) }}
