[#130] Refactoring the CTA block

--- a/wp-content/themes/wp-starter/blocks/cta/render.twig
+++ b/wp-content/themes/wp-starter/blocks/cta/render.twig
@@ -3,12 +3,23 @@
 #}
 
 {% set template = [
-  [
-    'core/pattern',
-    {
-      'slug': 'wp-starter/cta-inner-blocks'
-    }
-  ]
+	[
+		'core/heading',
+		{
+			"textAlign":"center",
+			'placeholder': 'Headline Goes Here'
+		}
+	],
+	[
+		'core/paragraph',
+		{
+			"align":"center",
+			'placeholder': 'Body text goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat'
+		}
+	],
+	[
+		'core/button'
+	]
 ] %}
 {% set inner = { template: template } %}
 <section {{ block_attrs( block ) }}>
