--- a/wp-content/themes/wp-starter/blocks/text-image/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-image/render.twig
@@ -4,10 +4,33 @@
 
 {% set template = [
 	[
-		'core/pattern',
-		{
-			'slug': 'wp-starter/text-image-inner-blocks',
-		}
+		"core/media-text",
+		[],
+		[
+			[
+				"core/paragraph",
+				{
+					"className":"is-style-eyebrow",
+					"placeholder":"Eyebrow Text"
+				}
+			],
+			[
+				"core/heading",
+				{
+					"level":3,
+					"placeholder":"Headline Text"
+				}
+			],
+			[
+				"core/paragraph",
+				{
+					"placeholder":"Body Text"
+				}
+			],
+			[
+				"core/buttons"
+			]
+		]
 	]
 ] %}
 {% set allowed = [
