[#130] Refactor video embed

--- a/wp-content/themes/wp-starter/blocks/video-embed/render.twig
+++ b/wp-content/themes/wp-starter/blocks/video-embed/render.twig
@@ -4,9 +4,21 @@
 
 {% set template = [
 	[
-		'core/pattern',
+		"core/heading",
 		{
-			slug: 'wp-starter/video-embed-inner-blocks'
+			"textAlign":"center"
+		}
+	],
+	[
+		"core/paragraph",
+		{
+			"align":"center"
+		}
+	],
+	[
+		"core/embed",
+		{
+			"align":"center"
 		}
 	],
 ] %}
