[#130] Fixing css for logo grid, icon cards

--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/render.twig
@@ -13,7 +13,7 @@
 	allowedBlocks: allowed,
 } %}
 <section {{ block_attrs( block ) }}>
-	<div class="flex flex-wrap gap-24 justify-left alignwide">
+	<div class="alignwide">
   		{{ inner_blocks( inner ) }}
 	</div>
 </section>
