--- a/wp-content/themes/wp-starter/blocks/logo-grid/style.css
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/style.css
@@ -1,10 +1,18 @@
 @layer components {
 	.acf-block-logo-grid {
+		> div,
+		.block-editor-block-list__layout {
+			@apply flex flex-wrap justify-start gap-24;
+		}
+
 		& figure {
 			@apply flex;
 			@apply aspect-5/3;
 			@apply basis-1/2-gap lg:basis-1/4-gap;
 
+			> div {
+				@apply !h-full;
+			}
 			& img {
 				@apply block;
 				@apply h-full max-w-full;
