--- a/wp-content/themes/wp-starter/blocks/logo-grid/render.twig
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/render.twig
@@ -2,14 +2,9 @@
   Block: Logo Grid
 #}
 
-{% set template = [
-  [ 'core/image' ],
-  [ 'core/image' ],
-  [ 'core/image' ],
-] %}
 {% set allowed = [ 'core/image' ] %}
 {% set inner = {
-	template: template,
+	template: attributes.template ?? [],
 	allowedBlocks: allowed,
 } %}
 <section {{ block_attrs( block ) }}>
