--- a/wp-content/themes/wp-starter/blocks/text-image/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-image/render.twig
@@ -2,40 +2,8 @@
   Block: Text & Image
 #}
 
-{% set template = [
-	[
-		"core/media-text",
-		[],
-		[
-			[
-				"core/paragraph",
-				{
-					"className":"is-style-eyebrow",
-					"placeholder":"Eyebrow Text"
-				}
-			],
-			[
-				"core/heading",
-				{
-					"level":3,
-					"placeholder":"Headline Text"
-				}
-			],
-			[
-				"core/paragraph",
-				{
-					"placeholder":"Body Text"
-				}
-			],
-			[
-				"core/buttons"
-			]
-		]
-	]
-] %}
-
 {% set inner = {
-	template: template,
+	template: attributes.template ?? [],
 } %}
 <section {{ block_attrs( block ) }}>
 	<div class="alignwide">
