--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -8,28 +8,12 @@ Block: Alert Banner
     {% set id = 'alert' ~ block.block_id %}
 {% endif %}
 
-
-{% set template = [
-	[
-		'core/paragraph',
-		{
-			'placeholder': 'Enter alert banner message...'
-		}
-	],
-	[
-		'core/button',
-		{
-			'className': 'is-style-outline',
-		}
-	]
-] %}
-
 {% set allowed = [
 	'core/paragraph',
 	'core/button',
 ] %}
 {% set inner = {
-	template: template,
+	template: attributes.template ?? [],
 	allowedBlocks: allowed
 } %}
 
