[N/A] Twig context updates

--- a/wp-content/themes/wp-starter/blocks/accordion/render.twig
+++ b/wp-content/themes/wp-starter/blocks/accordion/render.twig
@@ -17,6 +17,6 @@
 	template: template,
 	allowedBlocks: allowed
 } %}
-<section {{ block_attrs( attributes ) }}>
+<section {{ block_attrs( block ) }}>
   {{ inner_blocks( inner ) }}
 </section>
