--- a/wp-content/themes/wp-starter/blocks/breadcrumbs/render.twig
+++ b/wp-content/themes/wp-starter/blocks/breadcrumbs/render.twig
@@ -2,6 +2,6 @@
   Block: Breadcrumbs
 #}
 
-<section {{ block_attrs( attributes ) }}>
+<section {{ block_attrs( block ) }}>
   {{ function( 'wpstarter_breadcrumbs' ) }}
 </section>
