--- a/wp-content/themes/wp-starter/blocks/image-caption/render.twig
+++ b/wp-content/themes/wp-starter/blocks/image-caption/render.twig
@@ -11,6 +11,6 @@
 	allowedBlocks: allowed,
 	templateLock: 'all'
 } %}
-<section {{ block_attrs( attributes ) }}>
+<section {{ block_attrs( block ) }}>
   {{ inner_blocks( inner ) }}
 </section>
