--- a/wp-content/themes/wp-starter/blocks/page-header/render.twig
+++ b/wp-content/themes/wp-starter/blocks/page-header/render.twig
@@ -11,6 +11,6 @@
   ]
 ] %}
 {% set inner = { template: template } %}
-<section {{ block_attrs( attributes ) }}>
+<section {{ block_attrs( block ) }}>
 	{{ inner_blocks( inner ) }}
 </section>
