--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -23,15 +23,15 @@ Block: Alert Banner
 
 {% if function('is_admin') == false %}
 	{% set attrs = {
-		'x-data': '{ ' ~ attributes.id ~ ': $persist(true) }',
-		'x-show': attributes.id
+		'x-data': '{ ' ~ block.id ~ ': $persist(true) }',
+		'x-show': block.id
 	} %}
 {% endif %}
 <section
-	{{ block_attrs( attributes, 'gap-24 lg:gap-48', attrs ) }}
+	{{ block_attrs( block, 'gap-24 lg:gap-48', attrs ) }}
 >
 	<div class="flex flex-col items-start gap-24 lg:flex-row lg:gap-48 lg:items-center">
 		{{ inner_blocks( inner ) }}
 	</div>
-	{{ function( 'alert_banner_dismiss_button', attributes.id ) }}
+	{{ function( 'alert_banner_dismiss_button', block.id ) }}
 </section>
