--- a/wp-content/themes/wp-starter/blocks/logo-grid/style.css
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/style.css
@@ -13,7 +13,8 @@
 			> div {
 				@apply !h-full;
 			}
-			& img {
+
+			& > img {
 				@apply block;
 				@apply h-full max-w-full;
 				@apply object-contain;
