[#130] Updating plop tempalte files to match new block files

--- a/wp-content/themes/wp-starter/plop-templates/parts/variations.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/parts/variations.json.hbs
@@ -2,14 +2,26 @@
     {
       "name": "{{dashCase name}}-default",
       "title": "{{titleCase name}} Default",
-	  "interBlock": "",
+	  "attributes": {
+        "align": "left",
+        "layout": {
+          "justifyContent":"left"
+        }
+      },
       "scope": ["transform"],
+	  "isActive": ["layout"]
       "isDefault": true
     },
 	{
       "name": "{{dashCase name}}-variation",
       "title": "{{titleCase name}} Variation",
-
+	  "attributes": {
+        "align": "center",
+        "layout": {
+          "justifyContent":"center"
+        }
+      },
       "scope": ["transform"],
+      "isActive": ["layout"]
     }
   ],
