--- a/wp-content/themes/wp-starter/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/block.json.hbs
@@ -6,6 +6,7 @@
   "category": "components",
   "textdomain": "{{dashCase themeslug}}",
   "keywords": ["{{dashCase name}}"],
+  "allowedBlocks": [],
   "attributes": {
     "align": {
       "type": "string",
