--- a/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
@@ -2,58 +2,8 @@
   Block: {{titleCase name}}
 #}
 
-{% set template = [
-	[
-		'core/columns',
-		{
-			'verticalAlignment':'center'
-		},
-		[
-			[
-				'core/column',
-				{
-					'verticalAlignment':'center',
-					'width':'66.66%'
-				},
-				[
-					[
-						'core/post-title'
-					],
-					[
-						'core/paragraph',
-						{
-							'placeholder': 'Page description ponam in culpa idiota aliis pravitatis. Principium ponere culpam in se justum praeceptum. Neque improperes et aliis qui non perfecte ipse docuit.'
-						}
-					]
-				]
-			],
-			[
-				'core/column',
-				{
-					'verticalAlignment':'center',
-					'width':'33.33%'
-				},
-				[
-					[
-						'core/image'
-					]
-				]
-			]
-		],
-	]
-] %}
 
-{# If you need to limit what block types are allowed
-{% set allowed = [
-	'core/group',
-] %}
-#}
-
-{% set inner = {
-	template: template,
-	allowedBlocks: allowed
-} %}
-
+{% set inner = { template: attributes.template ?? [] } %}
 
 <section \{{ block_attrs( attributes ) }}>
   \{{ inner_blocks( inner ) }}
