--- a/wp-content/themes/wp-starter/plop-templates/template.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/template.json.hbs
@@ -14,12 +14,15 @@
           },
           [
             [
-              "core/post-title"
+              "core/heading",
+			  {
+                "placeholder": "{{titleCase name}} Heading"
+              }
             ],
             [
               "core/paragraph",
               {
-                "placeholder": "Page description ponam in culpa idiota aliis pravitatis. Principium ponere culpam in se justum praeceptum. Neque improperes et aliis qui non perfecte ipse docuit."
+                "placeholder": "{{titleCase name}} description ponam in culpa idiota aliis pravitatis. Principium ponere culpam in se justum praeceptum. Neque improperes et aliis qui non perfecte ipse docuit."
               }
             ]
           ]
