--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -1,3 +1,4 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import-glob './tailwind.css';
+@import-glob './base/*.css';
+@import-glob './core-blocks/*.css';
+@import-glob './../../blocks/**/*.css';
