--- a/wp-content/themes/wp-starter/blocks/logo-grid/render.twig
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/render.twig
@@ -2,10 +2,8 @@
   Block: Logo Grid
 #}
 
-{% set allowed = [ 'core/image' ] %}
 {% set inner = {
-	template: attributes.template ?? [],
-	allowedBlocks: allowed,
+	template: block.template ?? [],
 } %}
 <section {{ block_attrs( block ) }}>
 	<div class="alignwide">
