--- a/wp-content/themes/wp-starter/blocks/page-header/render.twig
+++ b/wp-content/themes/wp-starter/blocks/page-header/render.twig
@@ -2,7 +2,7 @@
   Block: Page Header
 #}
 
-{% set inner = { template: template } %}
+{% set inner = { template: block.template } %}
 <section {{ block_attrs( block ) }}>
 	<div class="alignwide">
 		{{ inner_blocks( inner ) }}
