[#130] Updating blocks to use template.json

--- a/wp-content/themes/wp-starter/blocks/cta/render.twig
+++ b/wp-content/themes/wp-starter/blocks/cta/render.twig
@@ -2,7 +2,9 @@
   Block: CTA
 #}
 
-{% set inner = { template: template } %}
+{% set inner = {
+	template: block.template ?? [],
+} %}
 <section {{ block_attrs( block ) }}>
 	<div class="alignwide">
 		{{ inner_blocks( inner ) }}
