--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
@@ -1,10 +1,8 @@
 @layer components {
 	.acf-block-text-icon-cards {
-		@apply flex gap-y-32 md:gap-y-80;
-
 		> div,
 		> div > .block-editor-block-list__layout {
-			@apply flex flex-wrap justify-start gap-24;
+			@apply flex flex-wrap justify-start gap-x-24 gap-y-32 md:gap-y-80;
 		}
 
 		.acf-block-text-icon-card,
