--- a/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
@@ -3,8 +3,9 @@
 #}
 
 
-{% set inner = { template: attributes.template ?? [] } %}
-
+{% set inner = {
+	template: block.template ?? [],
+} %}
 <section \{{ block_attrs( attributes ) }}>
   \{{ inner_blocks( inner ) }}
 </section>
