[#130] Refactor of block wrapper

--- a/wp-content/themes/wp-starter/blocks/accordion/render.twig
+++ b/wp-content/themes/wp-starter/blocks/accordion/render.twig
@@ -6,7 +6,7 @@
 	template: block.template ?? [],
 } %}
 <section {{ block_attrs( block ) }}>
-	<div class="alignwide">
+	<div class="acf-block__container">
   		{{ inner_blocks( inner ) }}
 	</div>
 </section>
