--- a/wp-content/themes/wp-starter/blocks/breadcrumbs/render.twig
+++ b/wp-content/themes/wp-starter/blocks/breadcrumbs/render.twig
@@ -3,5 +3,5 @@
 #}
 
 <section {{ block_attrs( block ) }}>
-  {{ function( 'wpstarter_breadcrumbs', template ) }}
+  {{ function( 'wpstarter_breadcrumbs', block.template ) }}
 </section>
