--- a/wp-content/themes/wp-starter/blocks/page-header/render.twig
+++ b/wp-content/themes/wp-starter/blocks/page-header/render.twig
@@ -4,7 +4,7 @@
 
 {% set inner = { template: block.template } %}
 <section {{ block_attrs( block ) }}>
-	<div class="alignwide">
+	<div class="acf-block__container">
 		{{ inner_blocks( inner ) }}
 	</div>
 </section>
