--- a/wp-content/themes/wp-starter/blocks/logo-grid/style.css
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/style.css
@@ -1,6 +1,9 @@
 @layer components {
 	.acf-block-logo-grid {
-		> div,
+		.acf-block__container {
+			@apply flex flex-wrap justify-start gap-24;
+		}
+
 		.block-editor-block-list__layout {
 			@apply flex flex-wrap justify-start gap-24;
 		}
