--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
@@ -1,7 +1,7 @@
 @layer components {
 	.acf-block-text-icon-cards {
-		> div,
-		> div > .block-editor-block-list__layout {
+		.acf-block__container,
+		.acf-block__container > .block-editor-block-list__layout {
 			@apply flex flex-wrap justify-start gap-x-24 gap-y-32 md:gap-y-80;
 		}
 
