--- a/wp-content/themes/wp-starter/src/styles/base/global.css
+++ b/wp-content/themes/wp-starter/src/styles/base/global.css
@@ -36,4 +36,14 @@
 	.entry-content > *:not(:first-child) {
 		@apply mt-0;
 	}
+
+	.entry-content > *:not(.alignfull),
+	.alignfull.is-layout-constrained > .acf-block__container {
+		max-width: theme('contentBase');
+		@apply mx-auto;
+	}
+
+	.entry-content > .alignfull {
+		@apply relative left-1/2 ml-[-50vw] w-screen max-w-[100vw];
+	}
 }
