--- a/wp-content/themes/wp-starter/blocks/image-caption/render.twig
+++ b/wp-content/themes/wp-starter/blocks/image-caption/render.twig
@@ -7,7 +7,7 @@
 	templateLock: 'all'
 } %}
 <section {{ block_attrs( block ) }}>
-	<div class="acf-block__container">
+	<div class="acf-block-inner__container">
 		{{ inner_blocks( inner ) }}
 	</div>
 </section>
