--- a/wp-content/themes/wp-starter/src/styles/base/global.css
+++ b/wp-content/themes/wp-starter/src/styles/base/global.css
@@ -38,12 +38,12 @@
 	}
 
 	.entry-content > *:not(.alignfull),
-	.alignfull.is-layout-constrained > .acf-block__container {
+	.alignfull.is-layout-constrained > .acf-block-inner__container {
 		max-width: theme('contentBase');
 		@apply mx-auto;
 	}
 
 	.entry-content > .alignfull {
-		@apply relative left-1/2 ml-[-50vw] w-screen max-w-[100vw];
+		/* @apply relative left-1/2 ml-[-50vw] w-screen max-w-[100vw]; */
 	}
 }
